# URR

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  render.yaml  sourceborn.bundle
.github/workflows/: tests.yml
docs/: RECOMMENDATION.md  SOURCEBORN_CORE.md
engine/: sourceborn_system_prompt.md
src/sourceborn/: __init__.py  __main__.py  brains.py  core_gate.py  demo.py  domain.py  dots.py  doubt.py  drift_guard.py  engine.py  enums.py  evidence.py  extract.py  fuel.py  grounding.py  halt_map.py  ingest.py  llm.py  memory.py  models.py  nodes.py  parameters.py  persona.py  safety.py  scheduler.py  server.py  wisdom.py
tests/: test_engine.py
tools/: docx2txt.py
