[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sourceborn"
version = "0.1.0"
description = "Sourceborn (SBUR) — a private, continuously-learning reasoning engine; a control layer around a base model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # core is stdlib-only by design (ownable, zero-install)

[project.optional-dependencies]
claude = ["anthropic>=0.39"]
dev = ["pytest>=7"]

[project.scripts]
sourceborn = "sourceborn.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
